external/php_fpm_sandbox/php_sandbox/tests/002.out
Fatal error: Uncaught Error: Call to undefined function php_sandbox_test1() in /root/simpleIDS/filters/webshell/php/sandbox/php_sandbox/tests/002.php:2
Stack trace:
#0 {main}
  thrown in /root/simpleIDS/filters/webshell/php/sandbox/php_sandbox/tests/002.php on line 2