external/php_fpm_sandbox/php_sandbox/tests/002.php
<?php
$ret = php_sandbox_test1();

var_dump($ret);
?>
